2018-05-08  Jaroslav Fojtik  <JaFojtik@seznam.cz>

        * VisualMagick/configure/system_page.cpp
        * VisualMagick/configure/system_page.h
        * VisualMagick/configure/target_page.h
        Ability to re-use already given paths. It is highly frustrating 
        to enter path for different configurations again and again.

2015-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/vid.c (ReadVIDImage): Fix use of uninitialized variable
	reported by MSVC 2003 (but not GCC, Clang, or Coverity).

2015-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fix possible leak of profiles in
	error path.

	* coders/mpc.c (ReadMPCImage): Fix memory leak of values
	allocation.
	(ReadMPCImage): Fix possible leak of profiles in error path. Fixes
	Coverity 80697 "Resource leak".

2015-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fix memory leak of values
	allocation.

2015-05-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Hopefully quiet Coverity 10305
	"Untrusted loop bound".

	* coders/tga.c (ReadTGAImage): Hopefully quiet Coverity 53418
	"Untrusted loop bound".

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Eliminate
	all use of operating system provided temporary file allocation
	functions (all apparently flawed in one way or another) and rely
	exclusively on our own implementation.

	* magick/constitute.c (ConstituteImage): Quiet Coverity 53399
	"Logically dead code".

	* coders/webp.c (ReadWEBPImage): Quiet Coverity 53400 "Logically dead
	code".

	* coders/miff.c (WriteRunlengthPacket): More work to quiet
	Coverity 10186 and 10214 "Missing break in switch".

2015-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Thoroughly
	vet temporary file path.  Might quiet Coverity 64613 "Use of
	untrusted string value".
